<!--
  ~ Copyright (c) 2020. Manuel Koloska, Band Genossenschaft. All rights reserved.
  -->

<resources>
    <string name="app_name">Eartag Reader</string>
    <string name="action_settings">Settings</string>
    <string name="main_fragment_name">Eartag List</string>
    <string name="add_fragment_name">Add Eartag</string>
    <string name="delete_list">Delete List</string>
    <string name="share_list">Share List</string>
    <string name="tvdNumber">Eartag</string>
    <string name="confirm_delete_list">Do you really want to delete the list?</string>
    <string name="confirm">Confirm</string>
    <string name="abort">Abort</string>
    <string name="storagelocation" translatable="false">lists</string>
    <string name="authority" translatable="false">ch.band.manko.eartagreader.fileprovider</string>
    <string name="share_title">Eartag-List</string>
    <string name="no_camera_permission">No permission to access camera.</string>
    <string name="import_sucessful">Import succeded.</string>
    <string name="import_file_incompatible">This file can not be imported.</string>
    <string name="import_parse_error">Error while importing the file. Try importing the file again.</string>
    <string name="import_save_entry">Entry added to the App.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about">about</string>
    <string name="import_file_empty">This is file seems to be empty</string>
    <string name="about_version_title">version:</string>
    <string name="about_project_site">Projectsite:</string>
    <string name="about_copyright_notice">Copyright:</string>
</resources>
