<!--
  ~ Copyright (c) 2020. Manuel Koloska, Band Genossenschaft. All rights reserved.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ch.manko.usingocrinapps.googlemlkitwithcamerax.MainActivity">
    <item
        android:id="@+id/clear_list"
        android:icon="@drawable/ic_delete_forever_black_24dp"
        android:title="@string/delete_list"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_share_black_24dp"
        android:title="@string/share_list"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/about"
        android:icon="@drawable/ic_baseline_info_24"
        android:title="@string/about"
        app:showAsAction="ifRoom" />
</menu>
